# awaitable

./: Cargo.toml  README.md
.github/workflows/: rust.yml
awaitable-error/: Cargo.toml
awaitable-error/src/: lib.rs
src/: error.rs  lib.rs
