[package]
name = "awaitable"
version = "0.3.2"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "Awaitable type with input and output that can be stored in container."
repository = "https://github.com/NobodyXu/awaitable"

keywords = ["async", "utilities"]
categories = ["asynchronous"]

[dependencies]
thiserror = "1.0.29"
parking_lot = "0.11.2"
